objects/Related_Entity__c.object
<CustomObject>
    <fields>
        <fullName>AddressLine1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AddressLine1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressLine2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AddressLine2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressLine3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AddressLine3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>County</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Entity_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Entity ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fax</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group ID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Relationship_Term_Reason_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Relationship Termination Reason Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Term_Reason_Desc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Relationship Termination Reason Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Type Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Desc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Type Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <description>This object will be used to retrieve related entities for group</description>
    <label>Related Entity</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Related Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Related Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>